--- a/src/index.scss
+++ b/src/index.scss
@@ -127,13 +127,21 @@ body {
     width: 1140px;
     height: 100%;
     .logo {
-      width: 180px;
-      height: 30px;
+      //   width: 180px;
+      // height: 30px;
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
-      background-image: url("./images/logo.png");
+      // background-image: url("./images/logo.png");
       cursor: pointer;
+      color: white;
+      text-transform: uppercase;
+      font-weight: 500;
+      font-size: 25px;
+      .icon {
+        margin-right: 10px;
+        font-size: 30px;
+      }
     }
   }
 }
@@ -259,6 +267,7 @@ body {
       p {
         line-height: 26px;
         width: 560px;
+        text-align: justify;
         margin-bottom: 15px;
         span {
           white-space: nowrap;
